Updated Project Name
Name changed by --> ExNova

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="page-title">HFT Excel Tool With AI</h1>
+        <h1 class="page-title">ExNova Version 0.1.00</h1>
         
         <div class="row g-4">
             <div class="col-md-4 mb-4">
